--- a/public/user/assets/css/style.css
+++ b/public/user/assets/css/style.css
@@ -325,8 +325,8 @@ hr {
 }
 
 .section-padding {
-    padding-top: 120px;
-    padding-bottom: 120px
+    padding-top: 30px;
+    padding-bottom: 30px
 }
 
 .separator {
@@ -2255,68 +2255,73 @@ hr {
 }
 
 .services-padding {
-    padding-top: 145px;
-    padding-bottom: 170px
+    padding-top: 45px;
+    padding-bottom: 70px;
+    margin-bottom:30px;
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
     .services-padding {
-        padding-top: 145px;
-        padding-bottom: 170px
+        padding-top: 45px;
+        padding-bottom: 70px;
+    margin-bottom:30px;
     }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     .services-padding {
-        padding-top: 100px;
-        padding-bottom: 70px
+        padding-top: 50px;
+        padding-bottom: 35px;
+    margin-bottom:30px;
     }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
     .services-padding {
-        padding-top: 65px;
-        padding-bottom: 70px
+        padding-top: 30px;
+        padding-bottom: 35px;
+    margin-bottom:30px;
     }
 }
 
 @media (max-width: 575px) {
     .services-padding {
-        padding-top: 65px;
-        padding-bottom: 70px
+        padding-top: 30px;
+        padding-bottom: 35px;
+        margin-bottom:30px;
     }
 }
 
 .section-paddingt30 {
-    padding-top: 195px;
-    padding-bottom: 90px
+    padding-top: 100px;
+    padding-bottom: 45px
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
     .section-paddingt30 {
-        padding-top: 150px;
-        padding-bottom: 90px
+        padding-top: 70px;
+        padding-bottom: 45px
     }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     .section-paddingt30 {
-        padding-top: 100px;
-        padding-bottom: 40px
+        padding-top: 50px;
+        padding-bottom: 20px
     }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
     .section-paddingt30 {
-        padding-top: 65px;
-        padding-bottom: 10px
+        padding-top: 30px;
+        padding-bottom: 5px
     }
 }
 
 @media (max-width: 575px) {
     .section-paddingt30 {
-        padding-top: 65px;
-        padding-bottom: 10px
+        padding-top: 30px;
+        padding-bottom: 5px
     }
 }
 
